--- a/src/configuration/switch.styles.css
+++ b/src/configuration/switch.styles.css
@@ -1,40 +1,44 @@
-.switch-checkbox {
+.switchCheckbox {
   height: 0;
   width: 0;
   visibility: hidden;
 }
 
-.switch-label {
+.switchLabel {
   display: flex;
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: 100px;
-  height: 50px;
+  width: 50px;
+  height: 25px;
   background: grey;
-  border-radius: 100px;
+  border-radius: 50px;
   position: relative;
   transition: background-color 0.2s;
 }
 
-.switch-label .switch-button {
+.switchLabel .switchButton {
   content: "";
   position: absolute;
   top: 2px;
   left: 2px;
-  width: 45px;
-  height: 45px;
-  border-radius: 45px;
+  width: 22px;
+  height: 22px;
+  border-radius: 22px;
   transition: 0.2s;
   background: #fff;
   box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
 }
 
-.switch-checkbox:checked + .switch-label .switch-button {
+.switchCheckbox:checked + .switchLabel {
+  background: var(--omrs-color-interaction-minus-one);
+}
+
+.switchCheckbox:checked + .switchLabel .switchButton {
   left: calc(100% - 2px);
   transform: translateX(-100%);
 }
 
-.switch-label:active .switch-button {
-  width: 60px;
+.switchLabel:active .switchButton {
+  width: 50px;
 }
